--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -1,4 +1,6 @@
 extends layout
 block content
-	p
-		| This is the user's dashboard
+        ul
+          for article in articles
+                li
+                  a(href=article.link) #{article.title}
